--- a/README.adoc
+++ b/README.adoc
@@ -191,23 +191,13 @@ automatically injected into your pods when you deploy your application.
 
 Navigate to the `start` directory to begin.
 
-The MicroProfile Fault Tolerance API was added as a dependency to your `inventory` service's [hotspot file=0]`pom.xml` file. Look for
-the dependency with the [hotspot=mpFaultTolerance file=0]`mpFaultTolerance` artifact ID. Adding this dependency allows you to use the
-fault tolerance policies in your microservices.
+The MicroProfile Fault Tolerance API is added as a [hotspot=mpFaultTolerance file=0]`feature` in the inventory [hotspot file=0]`server.xml` file.
+Adding this feature turns on MicroProfile Fault Tolerance capabilities in Open Liberty, which allows you to use the fault tolerance policies in your microservices.
 
-You can also find the [hotspot=mpFaultTolerance2 file=1]`mpFaultTolerance` feature in your inventory [hotspot file=1]`server.xml` server configuration,
-which turns on MicroProfile Fault Tolerance capabilities in Open Liberty.
-
-The [hotspot file=2]`InventoryResource.java` file
+The [hotspot file=1]`InventoryResource.java` file
 makes a request to the `system` service through the MicroProfile Rest Client API.
 If you want to learn more about MicroProfile Rest Client,
 you can follow the https://openliberty.io/guides/microprofile-rest-client.html[Consuming RESTful services with template interfaces^] guide.
-
-pom.xml
-[source, xml, linenums, role='code_column']
-----
-include::finish/inventory/pom.xml[]
-----
 
 server.xml
 [source, xml, linenums, role='code_column']
