--- a/README.adoc
+++ b/README.adoc
@@ -19,8 +19,8 @@
 :page-related-guides: ['istio-intro', 'microprofile-fallback', `iguide-retry-timeout`]
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master
 :source-highlighter: prettify
-:page-seo-title: Building resilient microservices using MicroProfile and Istio Fault Tolerance
-:page-seo-description: A tutorial on MicroProfile Fault Tolerance integrated with Istio Fault Tolerance and an example on how to develop fault-tolerance microservices using Istio's Retry policy and MicroProfile Fault Tolerance's Fallback mechanism.
+:page-seo-title: Building resilient Java microservices using Eclipse MicroProfile and Istio Fault Tolerance
+:page-seo-description: A tutorial on Eclipse MicroProfile Fault Tolerance integrated with Istio Fault Tolerance and an example on how to develop fault-tolerant Java microservices using Istio's Retry policy and MicroProfile Fault Tolerance's Fallback mechanism.
 :guide-author: Open Liberty
 = Developing fault-tolerant microservices with Istio Retry and MicroProfile Fallback
 
