--- a/README.adoc
+++ b/README.adoc
@@ -436,7 +436,7 @@ Remember to replace `[system-pod-name]` with the pod name that is associated wit
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause -c system-container
 ```
 
 You will see the following output:
@@ -566,7 +566,7 @@ Pause the `system` service pod to simulate that the service is unavailable.
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause -c system-container
 ```
 
 Make a request to the service by using `curl`:
@@ -688,7 +688,7 @@ Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause -c system-container
 ```
 
 Make a request to the service by using `curl`:
@@ -825,7 +825,7 @@ Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause -c system-container
 ```
 
 Make a request to the service by using `curl`:
