--- a/README.adoc
+++ b/README.adoc
@@ -242,7 +242,7 @@ The integer value must be greater than or equal to -1. A value of -1 indicates t
 
 === Building and running the application
 
-Navigate to the `start` directory and run the following command to build your application and integrate the Retry policy into your microservices:
+Navigate to the `guide-{projectid}\start` directory and run the following command to build your application and integrate the Retry policy into your microservices:
 
 [role=command]
 ```
@@ -439,7 +439,6 @@ kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause -c system-con
 
 You will see the following output:
 
-U
 ----
 Pausing the defaultServer server.
 Pausing the defaultServer server completed.
