--- a/README.adoc
+++ b/README.adoc
@@ -501,7 +501,7 @@ Pause the `system` service pod to simulate that the service is unavailable.
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause -c system-container
+kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause
 ```
 
 Make a request to the service by using `curl`:
@@ -623,7 +623,7 @@ Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause -c system-container
+kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause
 ```
 
 Make a request to the service by using `curl`:
@@ -760,7 +760,7 @@ Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
 ```
-kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause -c system-container
+kubectl exec -it [system-pod-name] -- /opt/ol/wlp/bin/server pause
 ```
 
 Make a request to the service by using `curl`:
