--- a/README.adoc
+++ b/README.adoc
@@ -187,7 +187,7 @@ Navigate to the `guide-{projectid}/start` directory and run the following comman
 mvn package
 ```
 
-include::{common-includes}/ol-full-docker-pull.adoc[]
+include::{common-includes}/ol-icr-full-docker-pull.adoc[]
 
 Next, run the `docker build` commands to build container images for your application:
 
